--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"npm run dev",
-    "dev":"npx vuepress dev docs",
+    "dev":"npx vuepress dev mds",
     "build": "vuepress build mds"
   },
   "repository": {
